syntax = "proto3";
package myPackage;

service UserService {
  rpc GetUser(UserIdInput) returns (User);
  rpc UpdateUser(UpdateUserInput) returns (User);
  rpc DeleteUser(UserIdInput) returns (User);
  rpc GetItemsFromUser(UserIdInput) returns (Item);
}

service ItemService {
  rpc GetAllItems(EmptyInput) returns (ItemListOutput);
  rpc GetItem(ItemIdInput) returns (Item);
  rpc CreateItem(CreateItemInput) returns (Item);
  rpc UpdateItem(UpdateItemInput) returns (Item);
  rpc DeleteItem(ItemIdInput) returns (Item);
}

service TradeService {
  rpc GetTrade(TradeIdInput) returns (Trade);
  rpc GetAllTradesFromUser(UserIdInput) returns (TradeListOutput);
  rpc CreateTrade(CreateTradeInput) returns (Trade);
  rpc UpdateTradeStatus(UpdateTradeInput) returns (Trade);
}

message EmptyInput {}

message UserIdInput {
  int32 id = 1;
}

message UpdateUserInput {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string location = 5;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string location = 5;
}

message CreateItemInput {
  string title = 1;
  string description = 2;
  string category = 3;
  string imageUrl = 4;
  string condition = 5;
}

message ItemIdInput {
  int32 id = 1;
}

message UpdateItemInput {
  string title = 1;
  string description = 2;
  string category = 3;
  string imageUrl = 4;
  string condition = 5;
}

message ItemListOutput {
  repeated Item item = 1;
}

message Item {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string category = 4;
  string imageUrl = 5;
  string condition = 6;
}

message TradeIdInput {
  int32 id = 1;
}

message CreateTradeInput {
  int32 requesterId = 1;
  int32 receiverId = 2;
  int32 requestItemId = 3;
  int32 receiveItemId = 4;
}

message UpdateTradeInput {
  string status = 1;
}

message TradeListOutput {
  repeated Trade trade = 1;
}

message Trade {
  int32 id = 1;
  int32 requesterId = 2;
  int32 receiverId = 3;
  int32 requestItemId = 4;
  int32 receiveItemId = 5;
  User requester = 6;
  User receiver = 7;
  Item requestItem = 8;
  Item receiveItem = 9;
  string status = 10;
}