// Original file: lib/proto/my.proto


export interface CreateTradeInput {
  'requesterId'?: (number);
  'receiverId'?: (number);
  'requesterItemId'?: (number);
  'receiverItemId'?: (number);
}

export interface CreateTradeInput__Output {
  'requesterId'?: (number);
  'receiverId'?: (number);
  'requesterItemId'?: (number);
  'receiverItemId'?: (number);
}
